# aceapex

./: .gitignore  ACEAPEX_BENCHMARK.md BENCHMARK.md  ACEAPEX_README.md   ACEAPEX_TECHNICAL_NOTE.md TECHNICAL_NOTE.md  BENCHMARK.md  CMakeLists.txt  FORMAT_V3.md  LICENSE  Makefile  README.md  README_v2.md  TECHNICAL_NOTE.md  aceapex  aceapex.sh  build.sh
.github/workflows/: ci.yml
examples/: decode_example.cpp
include/: aceapex_decode.h
scripts/: run_bench.sh
src/: aceapex_api.cpp  aceapex_main.cpp  aceapex_py.py  acepx3.cpp  encode_streaming.cpp  lit_fse.cpp  zstd_xxhash.c
